k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biovalidator
  namespace: biovalidator-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biovalidator
  template:
    metadata:
      labels:
        app: biovalidator
    spec:
      terminationGracePeriodSeconds: 85
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: temporary
          emptyDir:
            sizeLimit: 128Mi
      containers:
        - name: biovalidator
          image: "dockerhub.ebi.ac.uk/ega/biovalidator:main"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: temporary
              mountPath: /tmp
          resources:
            limits:
              cpu: "1000m"
              memory: "2000Mi"
              ephemeral-storage: "256Mi"
            requests:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "128Mi"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3020
          readinessProbe:
            httpGet:
              path: /biovalidator/ready
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /biovalidator/live
              port: http
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
      nodeSelector:
        subnet: internal
      imagePullSecrets:
        - name: regcredebi
