k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biovalidator
  namespace: biovalidator-dev
  labels:
    app.kubernetes.io/name: biovalidator
    app.kubernetes.io/component: validator
spec:
  type: ClusterIP
  selector:
    app: biovalidator
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3020
