k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biovalidator
  namespace: biovalidator-dev
  
spec:
  rules:
    - host: dev.ega.ebi.ac.uk
      http:
        paths:
          - path: /biovalidator
            pathType: Prefix
            backend:
              service:
                name: biovalidator
                port:
                  number: 80
